# Directors-Dealing

./: README.md  requirements.txt  setup.cfg  setup.py
DD/: DD.py  __init__.py
DDs/: DD.py
Director's Dealing/: Directors' Dealing.py
