[metadata]
name = Directors Dealing
version = 0.0.1
author = Felgabe
author_email = felix.gabet@edhec.com
description = To download and get data from directors dealing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True